[package]
name = "storage-accessor-precompile"
version = "0.2.0"
authors = ["Dock.io"]
edition = "2018"
license = 'Apache-2.0'
[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
fp-evm = { version = "2.0.0-dev", default-features = false, path = "../../../../primitives/evm" }
evm = { version = "0.27.0", default-features = false, features = ["with-codec"] }

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies.serde]
features = ['derive']
optional = true
version = '1.0.119'

[dependencies.frame-support]
default-features = false
# version = '3.0.0'
git = "https://github.com/paritytech/substrate.git"
branch = "frontier"

[dependencies.sp-io]
default-features = false
# version = '3.0.0'
git = "https://github.com/paritytech/substrate.git"
branch = "frontier"

[dependencies.frame-metadata]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "frontier"

[dependencies.sp-std]
default-features = false
# version = '3.0.0'
git = "https://github.com/paritytech/substrate.git"
branch = "frontier"

[dependencies.sp-core]
default-features = false
# version = '3.0.0'
git = "https://github.com/paritytech/substrate.git"
branch = "frontier"

[dev-dependencies.frame-system]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "frontier"

[dev-dependencies.frame-support]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "frontier"

[dev-dependencies.pallet-evm]
path = "../.."

[features]
default = ['std']
std = [
    'sp-core/std',
    'sp-io/std',
    'frame-metadata/std',
    'sp-std/std',
    # 'sp-io/std',
    'fp-evm/std',
    'evm/std',
    'codec/std',
    'serde',
    'frame-support/std'
]
